# Capybara-CLI

./: .gitignore  .sage_config.yaml  LICENSE  NVIDIA_SETUP.md  README.md  pyproject.toml
src/capybara_cli/: __init__.py  __main__.py  agent.py  ascii.txt  config.py  exceptions.py  logger.py  main.py  ref.txt
src/capybara_cli/llm/: __init__.py  anthropic.py  base.py  factory.py  google.py  local.py  nvidia.py  openai.py
src/capybara_cli/memory/: long_term.py  manager.py  short_term.py
src/capybara_cli/tools/: __init__.py  base.py  bash.py  code_analysis.py  code_execution.py  file_edit.py  file_read.py  git.py  registry.py  search.py  web_search.py
tests/: test_config.py  test_llm.py  test_tools.py
