[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capybara-cli"
version = "0.1.0"
description = "Capybara CLI - An expert coding agent with superior performance"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Capybara Team" }
]
keywords = ["ai", "agent", "coding", "cli", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "prompt-toolkit>=3.0.0",
    "aiofiles>=23.0.0",
    "gitpython>=3.1.0",
    "pathspec>=0.11.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "tiktoken>=0.5.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
capybara = "capybara_cli.main:main"
capy = "capybara_cli.main:main"

[project.urls]
Homepage = "https://github.com/AnonymoDGH/Capybara-CLI"
Repository = "https://github.com/AnonymoDGH/Capybara-CLI"

[tool.hatch.build.targets.wheel]
packages = ["src/capybara_cli"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
